monitoring-stack/grafana/05-Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-server
  namespace: monitoring
spec:
  selector:
    app: grafana-server
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 3000
      protocol: TCP
      name: https
