monitoring-stack/grafana/06-Ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.foobar.de
      secretName: grafana-tls-secret
  rules:
    - host: grafana.foobar.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-server
                port:
                  number: 443
